--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,8 +8,12 @@ theme_dir: theme
 extra_javascript: 
   # - https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML
   - https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML-full
+  - https://use.fontawesome.com/ccef82ad40.js
 markdown_extensions:
   - admonition:
+  - def_list:
+  - footnotes:
+    # - PLACE_HOLDER: '///Footnotes Go Here///'
   - toc:
   - mdx_math:
   # - pymdownx.arithmatex:
