--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,10 @@
-repo_url: https://github.com/northshorewc/ccr2016
+# repo_url: https://github.com/northshorewc/ccr2016
 remote_branch: gh-pages
 site_url: https://northshorewc.github.io/ccr2016
 site_author: Eric Kiefer
 site_name: 2016 Annual Water Quality Report
-theme: material
-theme_dir: theme
+theme: readthedocs
+# theme_dir: theme
 extra_javascript: 
   # - https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML
   - https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML-full
@@ -13,7 +13,7 @@ markdown_extensions:
   - admonition:
   - def_list:
   - footnotes:
-    # - PLACE_HOLDER: '///Footnotes Go Here///'
+    # - PLACE_HOLDER: ///Footnotes Go Here///
   - toc:
   - mdx_math:
   # - pymdownx.arithmatex:
