--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,4 +25,4 @@ markdown_extensions:
   # - pymdownx.arithmatex:
 pages:
   - Home: index.md
-  - Additional Lead Information: lead.md
+  # - Additional Lead Information: lead.md
